<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_login_title">微修</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_feedback">反&#160;&#160;馈</string>
    <string name="common_status">加载中</string>
    <string name="common_status_empty">无数据</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="label_drop_down_refresh">下拉刷新</string>
    <string name="label_release_refresh">松开刷新</string>
    <string name="label_last_refresh">上次更新:<xliff:g>%s</xliff:g></string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="footer_load_more">加载更多</string>
    <string name="footer_loading">正在加载</string>
    <string name="header_load_more">获取更多历史</string>
    <string name="header_loading">正在获取</string>
    <string name="label_empty_series_no_images">暂时还没有照片</string>
    <string name="prompt_empty_remark">无备注信息</string>
    <string name="prompt_empty_common_value">无信息</string>
    <string name="common_number_zero">0</string>
    <string name="common_data_empty">无数据</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_update_download_dialog">新版本更新</string>
    <string name="label_update_download_query_update">升级到最新版本吗？</string>
    <string name="label_update_download_dialog_download">下载</string>
    <string name="label_update_download_dialog_cancel">取消</string>
    <string name="label_update_download_dialog_close">关闭</string>
    <string name="label_update_new_version_info">发现新版本:</string>
    <string name="title_activity_notice_list">公告历史</string>
    <string name="title_activity_notice_deial">公告信息</string>
    <string name="title_activity_photo_image_show">图片查看</string>
    <string name="label_activity_notice_detail_content">公告正文:</string>
    <string name="title_activity_repairman_assignment">维修派工</string>
    <string name="title_activity_repair_order_detail">报修单详情</string>
    <string name="common_alert_ok">确认</string>
    <string name="common_alert_cancel">取消</string>
    <string name="common_single_select_title">请选择一项</string>
    <string name="title_activity_simple_stat">工作台</string>
    <string name="title_activity_employment_repair_group_list">维修工维修单</string>
    <string name="title_activity_index_tab">标签首页</string>
    <string name="label_empty_repair_order_collection_zero_tip">没有报修单哦</string>
    <string name="label_empty_complaint_detail_zero_tip">暂时还没人回复哦</string>
    <string name="label_empty_workbench_employment_zero_tip">暂时还没人员信息哦</string>
    <string name="label_empty_workbench_division_zero_tip">暂时还没科室信息哦</string>
    <string name="label_empty_room_asset_zero_tip">暂时还没有资产信息哦</string>
    <string name="label_empty_my_material_zero_tip">暂时还没有材料哦</string>
    <string name="label_empty_query_material_zero_tip">暂时还没有申请记录哦</string>
    <string name="label_empty_append_material_zero_tip">暂时还没使用材料哦</string>
    <string name="label_empty_material_select_zero_tip">暂时还没材料可用哦</string>
    <string name="label_empty_complaint_index_zero_tip">暂时还没人建议哦</string>
    <string name="label_empty_room_meter_zero_tip">暂时还没住户相关信息哦</string>
    <string name="label_empty_workbench_material_zero_tip">暂时还没材料信息哦</string>
    <string name="label_empty_feedback_zero_tip">暂时还没人反馈哦</string>
    <string name="label_empty_notice_list_zero_tip">暂时还没有公告哦</string>
    <string name="label_empty_repair_order_collection_zero_tip_not_accept">没有要受理的报修单哦</string>
    <string name="label_empty_repair_order_collection_zero_tip_repairing">没有要维修的报修单哦</string>
    <string name="label_empty_repair_order_collection_zero_tip_finish">没有已完成的报修单哦</string>
    <string name="label_empty_repair_order_collection_click_to_refresh">点击刷新试试？</string>
    <string name="label_empty_fast_message_zero_tip">暂时没有快速回复，请添加</string>
    <string name="title_activity_index_modular">IndexModularActivity</string>
    <string name="title_activity_extra_modular">ExtraModularActivity</string>
    <string name="title_activity_edit_info">个人信息修改</string>
    <string name="title_fragment_change_password">修改密码</string>
    <string name="title_fragment_change_contact">修改手机号码</string>
    <string name="label_footer_repair_detail_tip">维修工们已经在赶来的路上了</string>
    <string name="title_activity_query_redo">申请返修</string>
    <string name="title_activity_query_check_done">请评价</string>
    <string name="label_query_check_done_tip">请对我们的服务做出评价吧~</string>
    <string name="title_activity_inner_test_setting">内部测试设置</string>
    <string name="page_name_fragment_about">关于梧桐</string>
    <string name="page_name_fragment_change_contact">修改联系方式</string>
    <string name="page_name_fragment_change_password">修改密码</string>
    <string name="page_name_fragment_complaint_list">建议（列表）</string>
    <string name="page_name_fragment_contribute_list">投稿（列表）</string>
    <string name="page_name_fragment_repairman_like">劳动节赞（列表）</string>
    <string name="page_name_fragment_found_list">招领（列表）</string>
    <string name="page_name_activity_edit_info">活动-修改信息</string>
    <string name="page_name_activity_employment_repair_group_list">活动-查看维修工下的报修单</string>
    <string name="page_name_activity_extra_modular">活动-额外模块</string>
    <string name="page_name_fragment_fast_message_setting">快速反馈设置</string>
    <string name="page_name_fragment_feedback_us">意见反馈</string>
    <string name="page_name_activity_full_exit">活动-完全退出</string>
    <string name="page_name_activity_index_modular">活动-首页模块</string>
    <string name="page_name_fragment_material_info">报修材料</string>
    <string name="page_name_fragment_more">更多</string>
    <string name="page_name_fragment_not_disturb_setting">免打扰设置</string>
    <string name="page_name_fragment_notice_list">公告列表</string>
    <string name="page_name_fragment_person_info">个人信息</string>
    <string name="page_name_fragment_repair">报修</string>
    <string name="page_name_activity_welcome">活动-启动页</string>
    <string name="page_name_fragment_workbench">工作台</string>
    <string name="title_activity_how_repair">如何维修</string>
    <string name="hint_activity_how_repair_content">请简单描述您是如何维修的</string>
    <string name="update_must_tips_text">当前版本必须更新后才能正常使用，请点击此处进行更新</string>
    <string name="av_index_tab_label_modular_page_office_material_apply_list_switcher_applying">申请中</string>
    <string name="av_index_tab_label_modular_page_office_material_apply_list_switcher_out_from_warehouse">已出库</string>
    <string name="av_index_tab_label_modular_page_office_material_apply_list_switcher_has_query">已确认</string>
    <string name="av_index_tab_label_modular_page_office_material_apply_list_switcher_has_cancel">已撤销</string>
    <string name="title_fragment_office_material_apply">行政申领</string>
    <string name="title_activity_office_material_apply_add">申领单</string>
    <string name="label_empty_office_material_apply_zero_tip">暂时还没有信息哦</string>
    <string name="title_activity_office_material_apply_detail">申领详情</string>
    <string name="character_vertical_bar">|</string>
    <string name="label_office_material_applying_label">申请</string>
    <string name="label_office_material_apply_detail_applicant_text">申领人</string>
    <string name="label_office_material_apply_detail_cancel_man_text">撤销人</string>
    <string name="label_office_material_apply_detail_query_man_text">确认人</string>
    <string name="label_office_material_apply_detail_stock_out_text">出库人</string>
    <string name="label_office_material_apply_detail_apply_time_text">申领时间</string>
    <string name="label_office_material_apply_detail_cancel_time_text">撤销时间</string>
    <string name="label_office_material_apply_detail_query_time_text">确认时间</string>
    <string name="label_office_material_apply_detail_stock_out_time_text">出库时间</string>
    <string name="label_office_material_apply_detail_material_list_text">申领清单</string>
    <string name="label_office_material_apply_detail_status_applying_text">申请中</string>
    <string name="label_office_material_apply_detail_status_has_query_text">已确认</string>
    <string name="label_office_material_apply_detail_status_has_stock_out_text">已出库</string>
    <string name="label_office_material_apply_detail_status_has_cancel_text">已撤销</string>
    <string name="title_activity_office_material_apply_material_list">申领清单</string>
    <string name="label_empty_office_material_apply_material_list_zero_tip">申领清单上没有数据哦</string>
    <string name="material_list_brand_label">品牌:</string>
    <string name="material_list_spec_label">型号:</string>
    <string name="material_list_spec_to_code_index_label">编号:</string>
    <string name="material_list_apply_number_label">申领数量:</string>
    <string name="material_list_stock_out_number_label">实领数量:</string>
    <string name="prompt_office_material_apply_order">请输入备注信息</string>
    <string name="activity_office_material_apply_order_add_material">添加物品</string>
    <string name="title_activity_office_material_select_list">办公用品选择</string>
    <string name="title_activity_office_material_cancel_order">撤销申领</string>
    <string name="title_activity_office_material_query_order">确认申领</string>
    <string name="title_activity_division_material_use_statistic">科室材料使用情况</string>
    <string name="label_statistic_office_apply_switcher_apply_info">申领</string>
    <string name="label_statistic_office_apply_switcher_material_info">用品</string>
    <string name="label_statistic_office_apply_switcher_division_info">科室</string>
    <string name="title_activity_division_material_apply">科室申领表</string>
    <string name="title_activity_office_material_division_statistic">科室材料使用情况</string>
    <string name="title_fragment_office_material_apply_static">申领管理</string>
    <string name="title_activity_repair_material_division_statistic">科室材料使用情况</string>
    <string name="label_repair_order_detail_large_accept_order">受理</string>
    <string name="label_repair_order_detail_large_finish_order">完成</string>
    <string name="label_repair_order_detail_large_take_photo">拍照</string>
    <string name="title_activity_repair_material_used_info">材料使用情况</string>
    <string name="title_activity_add_repair_material">添加材料</string>
    <string name="title_activity_recovery_repair_material">回收材料</string>
    <string name="title_activity_select_repair_material">选择材料</string>
    <string name="error_data_null">获取数据异常</string>
    <string name="title_fragment_home_page">微&#160;&#160;修</string>
    <string name="title_fragment_micro_share">微分享</string>
    <string name="title_fragment_micro_activity">微生活</string>
    <string name="label_repairman_empty_repair_order_collection_zero_tip_not_accept">暂时没有要修理的啦，我们可以休息会咯~</string>
    <string name="label_repairman_empty_repair_order_collection_zero_tip_repairing">快去看看报修单有还没受理的~</string>
    <string name="label_repairman_empty_repair_order_collection_zero_tip_finish">维修才刚开始，加油咯~</string>
    <string name="label_repairman_footer_repair_order_collection_not_accept">快受理单子吧，叔叔~同学们都很着急呐~ ( @o@ )||||</string>
    <string name="label_repairman_footer_repair_order_collection_repairing">辛苦啦~~给您加油~~快维修完啦~ ((o(^_ ^)o)) </string>
    <string name="hint_room_meter_child_meter_name">没有表名称</string>
    <string name="hint_room_meter_child_meter_date">无日期</string>
    <string name="label_room_meter_child_meter_recently_value">上期数</string>
    <string name="hint_room_meter_child_meter_recently_value">无记录</string>
    <string name="label_room_meter_child_meter_current_value">本期数</string>
    <string name="help_lost_submit_sussess_success_label">发布成功！</string>
    <string name="help_lost_submit_sussess_tip_first">现在小微帮您火速</string>
    <string name="help_lost_submit_sussess_tip_second">寻找好心人~</string>
    <string name="help_lost_submit_sussess_tip_third">请等候三秒钟……</string>
    <string name="my_publish_lost_found_switcher_found">我捡到了</string>
    <string name="my_publish_lost_found_switcher_lost">我弄丢了</string>
    <string name="my_publish_lost_found_switcher_complaint">我的建议</string>
</resources>