<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/head_titlebar" />

    <LinearLayout
        android:id="@+id/page_repair_switcher_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/modular_repair_page_switchers_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/page_office_material_apply_switcher_applying"
            style="@style/textview_page_repair_switchers"
            android:enabled="false"
            android:text="@string/av_index_tab_label_modular_page_office_material_apply_list_switcher_applying" />

        <TextView
            android:id="@+id/page_office_material_apply_switcher_out_from_warehouse"
            style="@style/textview_page_repair_switchers"
            android:text="@string/av_index_tab_label_modular_page_office_material_apply_list_switcher_out_from_warehouse" />

        <TextView
            android:id="@+id/page_office_material_apply_switcher_has_query"
            style="@style/textview_page_repair_switchers"
            android:text="@string/av_index_tab_label_modular_page_office_material_apply_list_switcher_has_query" />
        <TextView
            android:id="@+id/page_office_material_apply_switcher_has_cancel"
            style="@style/textview_page_repair_switchers"
            android:text="@string/av_index_tab_label_modular_page_office_material_apply_list_switcher_has_cancel" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_office_material_apply_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>