<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/child_meter_right_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@null"
            android:src="#d8d8d8" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:ellipsize="none"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/label_room_meter_child_meter_recently_value"
                    android:textColor="#999999"
                    android:textColorHint="#999999"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/child_meter_recently_value"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="18dp"
                    android:ellipsize="none"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_room_meter_child_meter_recently_value"
                    android:textColor="#666666"
                    android:textColorHint="#666666"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/child_meter_date"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="none"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_room_meter_child_meter_date"
                    android:singleLine="true"
                    android:textColor="#999999"
                    android:textColorHint="#999999"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="11.5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:ellipsize="none"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/label_room_meter_child_meter_current_value"
                    android:textColor="#999999"
                    android:textColorHint="#999999"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/child_meter_current_value"
                    android:layout_width="104dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/edittext_backgroud"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textColorHint="#666666"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/child_meter_name"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/child_meter_right_area"
        android:layout_weight="99"
        android:ellipsize="none"
        android:gravity="center_vertical"
        android:hint="@string/hint_room_meter_child_meter_name"
        android:textColor="#999999"
        android:textColorHint="#999999"
        android:textSize="16sp" />

</RelativeLayout>